<resources>
    <!-- Strings used for fragments for navigation -->
    <string name="action_acerca">Acerca de</string>
    <string name="action_contact">Contacto</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Petagram</string>
    <string name="comment">Comentario</string>
    <string name="email">Correo</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Nombre</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="question">Dinos tus dudas y sugerencias</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="sendComment">Enviar comentario</string>
    <string name="user_name">Laika</string>
    <string name="github">github.com/Pmcb04</string>
    <string name="twitter">twitter.com/pmcb04</string>
    <string name="linkedln">linkedin.com/in/pedromiguelcarmona/</string>
    <string name="instagram">instagram.com/pmcb04/</string>
    <string name="action_user">Configurar Cuenta</string>
    <string name="user_instagram">Escribe un usuario</string>
    <string name="save_user">Guardar usuario</string>
    <string name="error_user">No se ha insertado ningun usuario</string>
</resources>