<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InstagramActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="60dp"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/name_user_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/user_instagram"/>

        <Button
            android:id="@+id/save_user"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="80dp"
            android:text="@string/save_user"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>