<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiographyActivity">


        <include layout="@layout/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:rowCount="4"
            android:columnCount="2">

            <ImageView
                android:id="@+id/instagram"
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_margin="15dp"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/instagram"/>

            <TextView
                android:id="@+id/instagram_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:padding="20sp"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/instagram"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/linkedln"
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_margin="15dp"
                android:layout_row="1"
                android:layout_column="0"
                android:src="@drawable/linkedin"/>

            <TextView
                android:id="@+id/linkedln_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/linkedln"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/twitter"
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_margin="15dp"
                android:layout_row="2"
                android:layout_column="0"
                android:src="@drawable/twitter"/>

            <TextView
                android:id="@+id/twitter_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_row="2"
                android:layout_column="1"
                android:padding="20sp"
                android:text="@string/twitter"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/github"
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_margin="15dp"
                android:layout_row="3"
                android:layout_column="0"
                android:src="@drawable/github"/>

            <TextView
                android:id="@+id/github_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="start|center_vertical"
                android:layout_margin="5dp"
                android:padding="20sp"
                android:layout_row="3"
                android:layout_column="1"
                android:text="@string/github"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="20sp"/>

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>